I18N-1623 - Create Update and Delete Scheduled Job API Endpoint (#313)
* create scheduled job api

* error handling

* openai model rebuild

* deleteJob endpoint

* patch endpoint update

* openapi checksum

* endpoint path and response types

* scheduled job service

* scheduled after update and delete from Quartz

* bean annotation

* remove unused vars

* scheduled job exception

* throws exceptions refactor

* remove wildcards

* pre persist and pre update annotations

* validate properties string

* nits

* scheduled job dto

* openapi checksum

* scheduled job dto

* scheduled job dto

* openapi checksum

* resolve refactor

* typo

* tests

* tests

* tests

* tests

* tests

* spotless check

* tests
